--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   ],
   "dependencies": {
     "@nuxtjs/proxy": "^1.3.3",
-    "axios": "^0.18.0",
-    "axios-retry": "^3.1.2",
-    "consola": "^2.5.6"
+    "consola": "^2.5.6",
+    "ky": "^0.9.0",
+    "ky-universal": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "latest",
