--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "latest",
     "babel-jest": "latest",
     "codecov": "latest",
+    "core-js": "2",
     "eslint": "latest",
     "eslint-config-standard": "latest",
     "eslint-plugin-import": "latest",
