--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nuxtjs/proxy": "^1.3.3",
     "consola": "^2.9.0",
     "ky": "^0.11.1",
-    "ky-universal": "^0.2.2"
+    "ky-universal": "^0.2.2",
+    "semver": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "latest",
