--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: ci
+name: test
 
 on:
   push:
@@ -41,7 +41,7 @@ jobs:
         run: yarn lint
 
       - name: Test
-        run: yarn jest
+        run: yarn jest -i
 
       - name: Coverage
         uses: codecov/codecov-action@v1
