--- a/package.json
+++ b/package.json
@@ -2,24 +2,21 @@
   "name": "@nuxt/http",
   "version": "0.4.0",
   "description": "Universal HTTP Module for Nuxt.js",
+  "repository": "nuxt/http",
   "license": "MIT",
   "author": "Pooya Parsa <pooya@pi0.ir>",
   "main": "lib/module.js",
   "types": "types/index.d.ts",
-  "repository": "nuxt/http",
-  "publishConfig": {
-    "access": "public"
-  },
-  "scripts": {
-    "dev": "nuxt test/fixture",
-    "lint": "eslint lib test",
-    "test": "yarn lint && jest",
-    "release": "yarn test && standard-version && git push --follow-tags && npm publish"
-  },
   "files": [
     "lib",
     "types/*.d.ts"
   ],
+  "scripts": {
+    "dev": "nuxt test/fixture",
+    "lint": "eslint lib test",
+    "release": "yarn test && standard-version && git push --follow-tags && npm publish",
+    "test": "yarn lint && jest -i"
+  },
   "dependencies": {
     "@nuxtjs/proxy": "^1.3.3",
     "consola": "^2.11.3",
@@ -45,8 +42,8 @@
     "eslint-plugin-vue": "latest",
     "jest": "latest",
     "nuxt-edge": "latest",
-    "puppeteer": "^2.1.1",
+    "puppeteer": "latest",
     "standard-version": "latest",
-    "tib": "^0.7.4"
+    "tib": "latest"
   }
 }
