--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxt/http",
-  "version": "0.5.0",
+  "version": "0.5.3",
   "description": "Universal HTTP Module for Nuxt.js",
   "repository": "nuxt/http",
   "license": "MIT",
@@ -9,6 +9,7 @@
   "types": "types/index.d.ts",
   "files": [
     "lib",
+    "ky-universal",
     "types/*.d.ts"
   ],
   "scripts": {
@@ -18,11 +19,12 @@
     "test": "yarn lint && jest -i"
   },
   "dependencies": {
-    "@nuxtjs/proxy": "^1.3.3",
-    "consola": "^2.11.3",
-    "ky": "^0.19.0",
-    "ky-universal": "^0.5.0",
-    "semver": "^7.1.3"
+    "@nuxtjs/proxy": "^2.0.0",
+    "abort-controller": "^3.0.0",
+    "consola": "^2.13.0",
+    "ky": "^0.20.0",
+    "node-fetch": "^2.6.0",
+    "web-streams-polyfill": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "latest",
