--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,6 @@
 
 [build]
   base    = "docs"
-  command = "yarn && yarn build"
-  publish = "docs/.vuepress/dist"
+  command = "yarn generate"
+  publish = "dist"
+  ignore  = "git diff --quiet HEAD^ HEAD . ../package.json"
