docs: fix url for preview

--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -1,6 +1,6 @@
 {
   "title": "Http Module",
-  "url": "https://http.nuxtjs.org/",
+  "url": "https://http.nuxtjs.org",
   "logo": {
     "light": "/logo-light.svg",
     "dark": "/logo-dark.svg"
