--- a/docs/package.json
+++ b/docs/package.json
@@ -9,10 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "docus": "^0.0.8",
-    "nuxt": "^2.15.0"
+    "docus": "^0.5.5"
   },
   "devDependencies": {
-    "vue-plausible": "^1.1.2"
+    "vue-plausible": "^1.1.4"
   }
 }
