--- a/docs/package.json
+++ b/docs/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "preview": "nuxi preview",
+    "generate": "nuxi generate"
   },
   "dependencies": {
-    "docus": "^0.5.6"
+    "@nuxt-themes/docus": "^1.1.3",
+    "nuxt": "^3.0.0"
   },
   "devDependencies": {
-    "vue-plausible": "^1.1.4"
+    "nuxt-plausible": "^0.1.2"
   }
 }
