--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,8 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "@nuxt-themes/docus": "^1.1.3",
-    "nuxt": "^3.0.0"
+    "@nuxt-themes/docus": "^2.0.0-beta.12",
+    "nuxt": "^3.6.1"
   },
   "devDependencies": {
     "nuxt-plausible": "^0.1.2"
